<resources>
    <string name="app_name">BConforto</string>
    <string name="action_settings">Settings</string>
    <string name="horas">Horas</string>
    <string name="cloth">Pano</string>
    <string name="Calc">Calcular</string>
    <string name="metros">Metros</string>
    <string name="desconto">Desconto (%)</string>
    <string name="ClothPrice">Preço</string>
    <string name="ClothName">Nome</string>
    <string name="HourPriceResale">Preço Hora Revenda</string>
    <string name="HourPriceFinal">Preço Hora Consumidor Final</string>
    <string name="Save">Gravar</string>
    <string name="Cloth">Pano</string>
    <string name="Add">Adicionar</string>
    <string name="estimate_type">Tipo</string>
    <string name="foam">Espuma</string>
    <string name="foamPrice">Preço Espuma</string>
    <string name="margin_resale">Margem Revenda</string>
    <string name="margin_consumer">Margem Consumidor</string>
</resources>
