<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/estimate_type"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/estimateTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="0.5">
        </androidx.appcompat.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/horas"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/cloth"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/clothSpinner"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="0.5"
            android:paddingStart="10dp">
        </androidx.appcompat.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/metros"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/clothMeters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/foam"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foam" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/desconto"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:textAlignment="textEnd"
            />
    </LinearLayout>

</LinearLayout>